feat: add TailwindCSS and DaisyUI for UI styling

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,4 @@
-body {
-    background-color: skyblue;
+@import "tailwindcss";
+@plugin "../vendor/daisyui/daisyui.index.js" {
+    themes: light --default;
 }
