feat(layout): add base layout structure
- Add ux-icons and ux-twig-component packages
- Create Navbar Twig component

--- a/templates/components/Navbar.html.twig
+++ b/templates/components/Navbar.html.twig
@@ -15,7 +15,7 @@
         </div>
     </div>
     <div class="navbar-center">
-        <a href="{{ path('app_index') }}" class="btn btn-ghost text-xl">Snwotricks ❄️</a>
+        <a href="{{ path('app_index') }}" class="btn btn-ghost text-xl">Snowtricks ❄️</a>
     </div>
     <div class="navbar-end space-x-2">
         <button class="btn btn-ghost btn-circle">
